Refactor: Fazendo melhorias e atualizações Feat: Adicianando novas funções no db
